crates/ir/tests/snapshots/lower_test__constrained_instance_multi_bound_ok.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module constrained_instance_multi_bound_ok

type Pair[a, b] = Pair#0(a, b)
; extern println
; extern show

fn main() -> Unit =
  let v0: ~Pair[Int, String] = construct Pair::Pair#0(1, "ok")
  let v1: String = call show(v0)
  let v2: Bool = eq_string(v1, "pair")
  let v3: Unit = call println(v2)
  v3
