crates/ir/tests/snapshots/lower_test__constrained_instance_nested_ok.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module constrained_instance_nested_ok

type Option[e] = Some#0(a) | None#1
; extern println
; extern show

fn main() -> Unit =
  let v0: ~Option[Int] = construct Option::Some#0(42)
  let v1: ~Option[Option[Int]] = construct Option::Some#0(v0)
  let v2: String = call show(v1)
  let v3: Bool = eq_string(v2, "nested")
  let v4: Unit = call println(v3)
  v4
