crates/ir/tests/snapshots/lower_test__constrained_instance_option_ok.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module constrained_instance_option_ok

type Option[e] = Some#0(a) | None#1
; extern println
; extern show

fn main() -> Unit =
  let v0: ~Option[Int] = construct Option::Some#0(42)
  let v1: String = call show(v0)
  let v2: Bool = eq_string(v1, "ok")
  let v3: Unit = call println(v2)
  v3
