crates/ir/tests/snapshots/lower_test__constrained_instance_unconstrained_regression.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module constrained_instance_unconstrained_regression

type Box = Box#0(Int)
type List[e] = Cons#0(a, List[a]) | Nil#1
type Ordering = LT#0 | EQ#1 | GT#2
type Option[f] = Some#0(b) | None#1
type Result[g, h] = Ok#0(d) | Err#1(c)

fn f0 main() -> Unit =
  let v0: ~Box = construct Box::Box#0(1)
  let v1: String = call f29(v0)
  let v2: Bool = eq_string(v1, "box")
  let v3: Unit = call f1(v2)
  v3
