crates/ir/tests/snapshots/lower_test__constrained_ref_import.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module constrained_ref_import

; extern println
; extern render_it

fn main() -> Unit =
  let v0: (Int) -> String = make_closure(render_it, [])
  let v1: String = call_closure v0(42)
  let v2: Bool = eq_string(v1, "42")
  let v3: Unit = call println(v2)
  v3
