crates/ir/tests/snapshots/lower_test__derive_show_option.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module derive_show_option

type Option[a] = Some#0(a) | None#1
; extern println
; extern show

fn main() -> Unit =
  let v0: ~Option[Int] = construct Option::Some#0(42)
  let v1: String = call show(v0)
  let v2: Unit = call println(v1)
  v2
