crates/ir/tests/snapshots/lower_test__derive_show_record.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module derive_show_record

struct Point { x: Int, y: Int }

type Result[e, f] = Ok#0(b) | Err#1(a)
type Ordering = LT#0 | EQ#1 | GT#2
type Option[g] = Some#0(c) | None#1
type List[h] = Cons#0(d, List[d]) | Nil#1

fn f0 main() -> Unit =
  let v0: ~Point = call f48(1, 2)
  let v1: String = call f29(v0)
  let v2: Unit = call f1(v1)
  v2
